examples/test/testpolicy19361.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19361
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key49: value17
      key29: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value24
      podSelector:
        matchLabels:
          key33: value30
          key15: value30
